# pySCIPAC

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  vignette.ipynb  vignette.py
docs/: index.html  vignette.html
scipac/: __init__.py  anndata_utils.py  clustering.py  core.py  pca.py  preprocessing.py
