[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscipac"
version = "0.1.0"
description = "Single Cell Identifier of Phenotype-Associated Cells - Python Implementation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "pySCIPAC Contributors"}
]
keywords = [
    "single-cell",
    "RNA-seq",
    "phenotype",
    "cell-type",
    "bioinformatics",
    "genomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
leiden = [
    "python-igraph>=0.10.0",
    "leidenalg>=0.9.0",
]
ordinal = [
    "mord>=0.6",
]
survival = [
    "lifelines>=0.27.0",
]
batch = [
    "harmonypy>=0.0.9",
]
scanpy = [
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
]
viz = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
all = [
    "python-igraph>=0.10.0",
    "leidenalg>=0.9.0",
    "mord>=0.6",
    "lifelines>=0.27.0",
    "harmonypy>=0.0.9",
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pySCIPAC"
Repository = "https://github.com/yourusername/pySCIPAC"
Issues = "https://github.com/yourusername/pySCIPAC/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scipac*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
